--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <link href="/favicon.ico" rel="icon" type="image/svg+xml" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>UI</title>
+  <!-- 样式 -->
+  <link rel="stylesheet" href="https://api.oss.tenyon.cn/tenyon/assets/css/f_main.css">
+  <!-- 字体 -->
+  <link rel="stylesheet" href="https://api.oss.tenyon.cn/tenyon/assets/font/pingfangsc/result.css">
 </head>
 <body>
 <div id="app"></div>
